Add page updating

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "liquidjs": "^9.20.1"
   }
 }
