Add updated pages updating

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "node src/main.js serve",
     "init": "node src/main.js init",
     "fullupdate": "node src/main.js fullupdate",
-    "fullbuild": "node src/main.js fullbuild"
+    "fullbuild": "node src/main.js fullbuild",
+    "update": "node src/main.js update"
   },
   "keywords": [],
   "author": "Lee0701",
