--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
     "liquidjs": "^9.20.1"
   }
