--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
+    "fs-extra": "^9.1.0",
     "liquidjs": "^9.20.1"
   }
 }
